# model-orchestrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose-vanta.yml  docker-compose.yml  entrypoint.sh  orchestrator.phala-test.yml  pyproject.toml  pytest.ini
.github/workflows/: pytest.yaml
.pi/todos/: 455ae193.md  87b06b75.md  888c1574.md  9b0674fa.md  b1e06277.md  cc9115ce.md  e303d721.md  f1d27da9.md
docs/: configuration.md  tee-cluster-init.md  todo.md
docs/plans/: 2026-03-16-reproducible-cvm-deploy.md  2026-03-18-irys-storage-provider-design.md  2026-03-18-irys-storage-provider-plan.md
model_orchestrator/: cli.py
model_orchestrator/configuration/: __init__.py  example.models.dev.yml  example.orchestrator.dev.yml
model_orchestrator/data/: .gitignore  docker-compose.phala.registry.yml  docker-compose.phala.runner.vpc.yml  docker-compose.phala.runner.yml  docker-compose.phala.vpc-server.yml  models-phala-test.yml  newrelic.ini  orchestrator.phala-test.yml
model_orchestrator/entities/: __init__.py  crunch.py  errors.py  exceptions.py  failure.py  model_info.py  model_run.py  model_runs_cluster.py
model_orchestrator/infrastructure/: Dockerfile  (+3 more)
scripts/: build.sh  cleanup_ecr_images.py  cleanup_ecr_unused_images.py  cleanup_ecs_services.py  run_orchestrator.sh  setup_phala_cluster.sh  stop_crunch_services.py
tests/: test_crunch_schedule_service.py  test_model_runs_service.py  test_model_state_config_polling.py  test_nomad_runner.py  test_phala_cluster.py  test_sqlite_model_run_repository.py  test_web_socket_server.py
(+61 files in other folders)
